[build-system]
requires = ["setuptools>=55.0.0", "wheel", "mypy-protobuf~=2.0"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.py$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = [
    "**/*_pb2.py",
    "**/*_pb2.pyi",
]
skip = [
    "setup.py", # setuptools needs to be loaded before distutils.
                # Instruct isort not to go there. There be dragons.
    "docs/conf.py",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
order_by_type = true

[tool.check-manifest]
ignore = [
    "*_pb2.py",
    "*_pb2.pyi",
    "**/_protobuf_version.py",
]

[tool.mypy]
exclude = 'setup.py|\.?.*env|conf.py|build'