[build-system]
# We need mypy-protobuf during build - it is a plugin to protoc.
# The version requirement is iffy, there is no way to know whether
# this is going to be compatible to the installed protoc or not.
requires = ["setuptools>=55.0.0", "wheel", "mypy-protobuf~=3.4.0"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.py$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = [
    "**/*_pb2.py",
    "**/*_pb2.pyi",
]
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
order_by_type = true

[tool.check-manifest]
ignore = [
    "*_pb2.py",
    "*_pb2.pyi",
    "**/_protobuf_version.py",
]

[tool.mypy]
exclude = '\.?.*env|conf.py|build'

[tool.pytest.ini_options]
asyncio_mode = "auto"
